tools/sonarqube/sonarqube-db-deployment copy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarqube-postgres
  namespace: sonarqube
  labels:
    app: sonarqube-postgres
spec:
  serviceName: sonarqube-postgres
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube-postgres
  template:
    metadata:
      labels:
        app: sonarqube-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: sonarqube-postgres
#   namespace: sonarqube
#   labels:
#     app: sonarqube-postgres
# spec:
#   ports:
#     - port: 5432
#       targetPort: 5432
#   clusterIP: None
#   selector:
#     app: sonarqube-postgres
